# gprothetique

./: README.md  index.py  pyproject.toml  stats.json
conf/base/: catalog.yml  parameters.yml
src/gprothetique/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/gprothetique/pipelines/data_prediction/: nodes.py  pipeline.py
src/gprothetique/pipelines/data_processing/: nodes.py  pipeline.py
src/gprothetique/pipelines/data_science/: nodes.py  pipeline.py
tests/: test_hooks.py  test_main.py  test_pipeline_registry.py  test_settings.py
tests/pipelines/: test_pipelines.py
tests/pipelines/data_processing/: test_data_processing.py
tests/pipelines/data_science/: test_data_science.py
