[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "gprothetique"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
gprothetique = "gprothetique.__main__:main"

[tool.kedro]
package_name = "gprothetique"
project_name = "gprothetique"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "gprothetique.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
